<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/anotherbg"
    android:orientation="vertical"
    tools:context=".peoplebehind">

    <Button
        android:id="@+id/button4"
        android:layout_width="311dp"
        android:layout_height="41dp"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="36dp"
        android:layout_marginLeft="37dp"
        android:layout_marginRight="36dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/objectives"
        android:textColor="@color/text_color" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="358dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="4dp"
        android:layout_marginStart="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_color"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/client"
                android:textColor="@color/text_color"
                android:textSize="36sp"
                android:textStyle="bold" />

            <FrameLayout
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginEnd="199dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="199dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="361dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/dr_florence_rochelle_gan"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:gravity="start"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingStart="15dp"
                    android:text="@string/gan"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="110dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:text="@string/email"
                    android:textSize="18sp" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="348dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginEnd="199dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="199dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="25dp">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="361dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/iics_cnag_comdev"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="361dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:gravity="start"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingStart="15dp"
                    android:text="@string/insert_info_here"
                    android:textSize="18sp" />

            </FrameLayout>

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/developers"
                android:textColor="@color/text_color"
                android:textSize="36sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="25dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/cname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/catherine_bhel_carcha"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/cbio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:text="@string/cathy"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/cemail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:text="@string/cathemail"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="25dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/dname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dominic_casino"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/dbio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:text="@string/doms"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/demail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:text="@string/domsemail"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="25dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/sname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/scott_pons"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/sbio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:text="@string/scott"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/semail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:text="@string/scottemail"
                    android:textSize="18sp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>